# fmri-fm

./: .gitignore  .pre-commit-config.yaml  BACKGROUND.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  READING_LIST.md  README.md  engine_pretrain.py  flat_data.py  main_classification.py  main_extract_clips.py  main_pretrain.py  models_mae.py  models_mae_linear.py  pyproject.toml
config/: debug_pretrain.yaml  default_classification.yaml  default_extract_clips.yaml  default_pretrain.yaml  default_probe.yaml  default_regression.yaml  hcp_pheno_eval.yaml  hcp_task_eval.yaml  nsd_clip_class_eval.yaml  nsd_cluster_classification.yaml  ukbb_sex_eval.yaml
experiments/: README.md
experiments/pretrain_hcp/: launch_pretrain.sh  submit.ipynb
experiments/pretrain_mae/: launch_pretrain.sh  submit.ipynb
experiments/pretrain_mix/: README.md  launch_eval.sh  launch_pretrain.sh  run.sh  submit.ipynb
experiments/pretrain_ukbb/: launch_pretrain.sh  submit.ipynb
notebooks/: denoising_demo.ipynb  pca.ipynb  pca_task.ipynb  quickstart.ipynb
src/: engine_pretrain.py  flat_data.py  main_classification.py  main_extract_clips.py  main_pretrain.py  main_probe.py  main_regression.py  models_classification.py  models_mae.py  models_mae_linear.py  models_probe.py
src/brain_jepa/: README.md  brain_jepa.py  brain_jepa_vit.py  gradient.py  gradient_mapping_400.csv  helper.py  train.py
src/data/: flat_data.py  main_extract_clips.py  main_generate_hcp_flat.py  main_generate_hcp_parc.py  main_generate_nsd_flat.py  main_generate_ukbb_flat.py  main_resample_nsd.py  surface_utils.py
src/flat_capi/: adapters.py  data.py  engine_pretrain.py  main_pretrain.py  main_probe.py  models_capi.py  schedules.py
src/flat_mae/: masking.py  (+6 more)
test/: test_flat_data.py  test_models_mae.py  test_models_mae_linear.py
util/: misc.py  video_vit.py  visualization.py
(+56 files in other folders)
