[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fmri-fm"
dynamic = ["version"]
description = "Sophont fMRI foundation model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "einops",
    "fvcore",
    "huggingface_hub",
    "iopath",
    "ipython",
    "jupyter",
    "jupyterlab",
    "matplotlib",
    "numpy<2",
    "omegaconf",
    "pandas",
    "pillow",
    "pre-commit",
    "pytest",
    "scikit-learn",
    "scipy",
    "simplejson",
    "timm",
    "torch==2.4.1",
    "torchdata",
    "torchmetrics",
    "torchvision",
    "tqdm",
    "transformers",
    "wandb",
    "webdataset",
]

[tool.setuptools_scm]
version_file = "src/_version.py"
