[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fmri-fm"
dynamic = ["version"]
description = "MedARC fMRI foundation model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "einops",
    "huggingface_hub",
    "ipython",
    "jaxtyping",
    "jupyter",
    "matplotlib",
    "nibabel",
    "nsdcode",
    "numpy",
    "omegaconf",
    "pre-commit",
    "pydantic<2.7",  # silence pydantic v2 warning
    "pytest",
    "pycortex",
    "scikit-learn",
    "scipy",
    "timm",
    "torch",
    "torchvision",
    "tqdm",
    "wandb",
    "webdataset",
    "cloudpathlib[s3]",
]

[tool.setuptools_scm]
version_file = "src/_version.py"

[tool.uv.sources]
nsdcode = { git = "https://github.com/cvnlab/nsdcode.git", rev = "bfd36a503cc90a3eb3ebfd69b269403f7e186924" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["F722"]
